--- a/style.css
+++ b/style.css
@@ -469,6 +469,11 @@ button:hover {
 
 
 /* Respnosiv design & displaying navbar for small screen */
+@media (max-width: 768px){
+    *{
+        box-sizing:border-box;
+    }
+}
 @media (max-width: 768px) {
     .container {
         flex-direction: column;
