--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&family=Playwrite+US+Modern:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: poppins,sans-serif;
+    font-family: "Playwrite US Modern", cursive;
     text-decoration: none;
 }
 :root {
@@ -173,7 +176,7 @@ nav .navlinks li a:hover{
     transform: rotate(360deg);
 }
 .heading {
-    font-size: 4rem;
+    font-size: 2.8rem;
     text-align: center;
     margin: 5rem 0;
     color:var(--main-color)
@@ -191,7 +194,7 @@ nav .navlinks li a:hover{
 }
 
 h1 {
-    font-size:4rem;
+    font-size:2.8rem;
     margin-bottom: 20px;
     color:var(--main-color);
 }
@@ -211,9 +214,7 @@ h1 {
 }
 
 @media (max-width: 768px) {
-    .eddu {
-        width: 100%;
-    }
+    
 
     .education-item {
         padding: 15px;
@@ -246,7 +247,7 @@ h1 {
 }
 
 .skills-section h2 {
-    font-size: 4rem;
+    font-size: 2.8rem;
     margin-bottom: 20px;
     color: var(--main-color);
 }
@@ -301,7 +302,7 @@ h1 {
     background: var(--second-bg-color);
     padding-top: 20px;
     padding-bottom: 20px;
-    font-size: 4rem;
+    font-size: 2.8rem;
     color: var(--main-color);
 }
 
@@ -400,7 +401,7 @@ h2 {
     margin-top: 0;
     color: var(--main-color);
     text-align: center;
-    font-size:4rem;
+    font-size:2.8rem;
 }
 
 label {
